--- a/source/sass/components/_dropdown.scss
+++ b/source/sass/components/_dropdown.scss
@@ -162,9 +162,10 @@
    width: auto;
 
    &__content {
-     margin: 0;
+     margin: 0 auto;
      margin-bottom: 4rem;
      padding-left: 6rem;
+     width: 100%;
    }
 
    &__icon {
