--- a/source/sass/components/_person.scss
+++ b/source/sass/components/_person.scss
@@ -1,6 +1,7 @@
 .person {
   color: white;
-  max-width: 10rem;
+  max-width: 80%;
+  margin: 0 auto;
   position: relative;
 
   &-icon-box {
@@ -10,7 +11,7 @@
 
   &__icon {
     fill: white;
-    opacity: 0;
+
     transform: translateY(-5px);
     &:hover {
       fill: $link-color--hover;
@@ -29,12 +30,38 @@
     text-align: center;
     font-style: italic;
     font-weight: 400;
+    font-size: 2rem;
+    margin-top: 2rem;
+    margin-bottom: 0.5rem;
   }
 
   &__position {
-    //text-align: center;
+    display: block;
+    text-align: center;
+    font-size: 1.3rem;
+    margin-bottom: 2.5rem;
     color: $text-color-light;
     text-transform: uppercase;
+  }
+
+  &__btn {
+    display: block;
+    padding-top: 1.4rem;
+    padding-left: 2.3rem;
+    padding-bottom: 1.7rem;
+    transform: translateY(5px);
+    font-weight: 700 ;
+    width: 100%;
+    position: relative;
+    &::after {
+      content: '';
+      right: 20px;
+      height: 13px;
+      width: 15px;
+      @include centerer-y();
+      background-repeat: no-repeat;
+      background-image: url('../img/icons_svg/icon_message_black.svg');
+    }
   }
 }
 
@@ -43,28 +70,15 @@
 }
 
 @media (min-width: $tablet) {
-
-}
-
-@media (min-width: $desktop-sm) {
-
-}
-
-@media (min-width: $desktop) {
-
   .person {
-    max-width: 20rem;
 
-    &__name {
-      margin-top: 2rem;
-      margin-bottom: 0.5rem;
+    &__icon {
+      opacity: 0;
     }
 
-    &__position {
-      display: block;
-      text-align: center;
-      font-size: 1.3rem;
-      margin-bottom: 2.5rem;
+    &__btn {
+      opacity: 0;
+      font-weight: 400;
     }
 
     &:hover,
@@ -79,6 +93,7 @@
 
       .person__btn {
         transform: translateY(0);
+        font-weight: 700;
         opacity: 1;
       }
       .person__image {
@@ -94,21 +109,17 @@
         transition: font-weight .3s ease;
       }
     }
-    &__btn {
-      display: block;
-      opacity: 0;
-      transform: translateY(5px);
-      width: 100%;
-      position: relative;
-      &::after {
-        content: '';
-        right: 20px;
-        height: 13px;
-        width: 15px;
-        @include centerer-y();
-        background-repeat: no-repeat;
-        background-image: url('../img/icons_svg/icon_message_black.svg');
-      }
-    }
+  }
+}
+
+@media (min-width: $desktop-sm) {
+
+}
+
+@media (min-width: $desktop) {
+
+  .person {
+    max-width: 20rem;
+
   }
 }
