--- a/source/sass/components/_scheme.scss
+++ b/source/sass/components/_scheme.scss
@@ -1,72 +1,214 @@
 .scheme {
   margin: 0 auto;
-  max-width: 67%;
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+  max-width: 99%;
   color: $color-main;
-
   &__top {
     display: flex;
     justify-content: space-between;
   }
+
   &__mid {
     display: flex;
     justify-content: space-between;
   }
 
+  &__bot {
+    max-width: 60%;
+    margin: 0 auto;
+    margin-top: .5rem;
+  }
+
+  &__arrow {
+    display: inline-block;
+    background-repeat: no-repeat;
+    position: relative;
+    &--top,
+    &--bot {
+      width: 3.5rem;
+      height: auto;
+      &:before {
+        content: '';
+        @include centerer-x();
+        background-color: $color-main;
+        width: 1px;
+        height: 30px;
+      }
+    }
+
+    &--top {
+      margin-bottom: 2rem;
+      transform: rotate(180deg);
+      background-image: url('../img/icons_svg/arrow_scheme.svg');
+      &:before {
+        bottom: 6px;
+        height: 5.2rem;
+      }
+    }
+
+    &--bot {
+      margin-top: 1rem;
+      padding-top: 1rem;
+      background-image: url('../img/icons_svg/arrow_scheme.svg');
+      &:before {
+        width: 1px;
+        height: 3.9rem;
+      }
+    }
+
+    &--left-side,
+    &--right-side {
+      height: 3.5rem;
+      width: auto;
+      background-image: url('../img/icons_svg/arrow_scheme_left.svg');
+      &:before {
+        content: '';
+        @include centerer-y();
+        background-color: $color-main;
+        height: 1px;
+      }
+    }
+
+    &--left-side {
+      background-position: 100%;
+      padding-left: 8.4rem;
+      &:before {
+        left: 1.6rem;
+        width: 70%;
+      }
+    }
+
+    &--right-side {
+      background-position: 0;
+      padding-right: 8.2rem;
+      &:before {
+        right: 1.7rem;
+        width: 78%;
+      }
+    }
+  }
+
   &__title {
     font-style: italic;
+    text-align: center;
+    font-size: 1.6rem;
     font-weight: 700;
     color: currentColor;
+    max-width: 80%;
+    margin: 0 auto;
+
+    line-height: 1.2;
   }
 
   &__text {
+    font-size: 1.2rem;
+    text-align: center;
     color: currentColor;
   }
 
 }
 
 @media (min-width: $mobile) {
+  .scheme {
+    margin-bottom: 4rem;
+    &__title {
+      font-size: 2rem;
+      margin-top: -.5rem;
+    }
+  }
 }
 
+@media (min-width: 450px) {
+  .scheme {
+    &__arrow {
+      &--left-side {
+        padding-left: 13.0rem;
+        &:before {
+          width: 80%;
+        }
+      }
+
+      &--right-side {
+        padding-right: 12.8rem;
+        &:before {
+          width: 84%;
+        }
+      }
+    }
+  }
+}
+
+@media (min-width: 550px) {
+  .scheme {
+    &__arrow {
+      &--left-side {
+        padding-left: 18.0rem;
+        &:before {
+          width: 86%;
+        }
+      }
+
+      &--right-side {
+        padding-right: 17.8rem;
+        &:before {
+          width: 90%;
+        }
+      }
+    }
+  }
+}
+
+
+@media (min-width: 650px) {
+  .scheme {
+    max-width: 95%;
+
+    &__title {
+      margin-top: -.5rem;
+    }
+    &__arrow {
+      &--left-side {
+        padding-left: 23rem;
+        &:before {
+          width: 89%;
+        }
+      }
+
+      &--right-side {
+        padding-right: 20.8rem;
+        &:before {
+          width: 91%;
+        }
+      }
+    }
+  }
+}
 @media (min-width: $tablet) {
 
 }
 
 @media (min-width: $desktop-sm) {
-
-}
-
-@media (min-width: $desktop) {
   .scheme {
     margin: 0 auto;
     max-width: 67%;
-    margin-bottom: 4rem;
 
-    &__top {
-
-    }
     &__mid {
       margin-top: 1rem;
 
     }
+
     &__bot {
       max-width: 30%;
       margin: 0 auto;
       margin-top: .5rem;
     }
-    &__arrow {
-      display: inline-block;
-      background-repeat: no-repeat;
-      position: relative;
 
+    &__arrow {
       &--top,
       &--bot {
         width: 3.5rem;
-        height: auto;
         &:before {
-          content: '';
-          @include centerer-x();
-          background-color: $color-main;
-          width: 1px;
           height: 30px;
         }
       }
@@ -74,49 +216,28 @@
       &--top {
         margin-bottom: 2rem;
         transform: rotate(180deg);
-        background-image: url('../img/icons_svg/arrow_scheme.svg');
-
         &:before {
           bottom: 6px;
           height: 6.2rem;
         }
       }
+
       &--bot {
-        margin-top: 1rem;
-        padding-top: 1rem;
-        background-image: url('../img/icons_svg/arrow_scheme.svg');
         &:before {
-          width: 1px;
           height: 4.9rem;
-        }
-
-      }
-
-      &--left-side,
-      &--right-side {
-        height: 3.5rem;
-        width: auto;
-        background-image: url('../img/icons_svg/arrow_scheme_left.svg');
-        &:before {
-          content: '';
-          @include centerer-y();
-          background-color: $color-main;
-          height: 1px;
         }
       }
 
       &--left-side {
-        background-position: 100%;
         padding-left: 16rem;
         &:before {
           left: 1.6rem;
           width: 84%;
         }
       }
-      &--right-side {
-        background-position: 0;
-        padding-right: 16rem;
 
+      &--right-side {
+        padding-right: 16rem;
         &:before {
           right: 1.7rem;
           width: 88%;
@@ -125,13 +246,21 @@
     }
 
     &__title {
+      margin: 0;
+      max-width: inherit;
+      text-align: left;
       font-size: 2.5rem;
+      line-height: 1.3;
     }
+
     &__text {
-      text-align: center;
       font-size: 1.5rem;
       line-height: 1.4;
     }
-
   }
+}
+
+@media (min-width: $desktop) {
+
+
 }
