--- a/source/sass/layout/_footer.scss
+++ b/source/sass/layout/_footer.scss
@@ -1,5 +1,15 @@
 .footer {
+  &__content {
+    padding-top: 4.5rem;
+    max-width: 80%;
+    margin: 0 auto;
+  }
 
+  &__company-text-container {
+    padding-bottom: 2.2rem;
+    margin-bottom: 2.2rem;
+    border-bottom: 1px solid #d8d8d8;
+  }
   &__company-text {
     font-style: italic;
     color: $text-color;
@@ -31,9 +41,13 @@
     padding: 0.5rem 0;
   }
 
+  &__logo-container {
+    margin-bottom: 2rem;
+  }
+
   &__logo {
-    height: 3rem;
-    width: 8rem;
+    height: 5.9rem;
+    width: 15.8rem;
   }
 
   &__social-icon {
@@ -52,30 +66,28 @@
 }
 
 @media (min-width: $tablet) {
-
-}
-
-@media (min-width: $desktop-sm) {
-
-}
-
-@media (min-width: $desktop) {
-
   .footer {
 
     &__content {
       padding-top: 5rem;
+      max-width: inherit;
+      margin: 0;
     }
 
     &__logo {
       height: 6rem;
       width: 16rem;
     }
+
     &__logo-container {
       margin-bottom: 3rem;
     }
+
     &__company-text-container {
       max-width: 80%;
+      margin-bottom: 0;
+      border-bottom: 0;
+      border: none;
     }
 
     &__company-text {
@@ -153,4 +165,13 @@
       margin-right: 3rem;
     }
   }
+}
+
+@media (min-width: $desktop-sm) {
+
+}
+
+@media (min-width: $desktop) {
+
+
 }
