--- a/source/sass/layout/_content.scss
+++ b/source/sass/layout/_content.scss
@@ -267,6 +267,8 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  overflow: hidden;
+  padding-bottom: 10.5rem;
 }
 
 .about__heading-container {
@@ -333,6 +335,10 @@
     background-position: 0 110%;
     background-image: url(../img/webp/solutions_bg-2.png);
     background-size: 100%;
+  }
+
+  .features-section {
+    padding-bottom: 41.7rem;
   }
 }
 
