--- a/source/sass/layout/_hero.scss
+++ b/source/sass/layout/_hero.scss
@@ -1,5 +1,5 @@
 .hero {
-  height: 100vh;
+  min-height: 100vh;
   background-image: linear-gradient(90deg, rgba(35, 64, 110, 0.8) 0%, rgba(35, 64, 110, 0.8) 100%),
   url('../img/webp/hero_bg.jpg');
   background-repeat: no-repeat;
@@ -56,7 +56,7 @@
 
       &-container {
         padding-top: 42rem;
-        max-width: 37.5%;
+        max-width: 50.5%;
 
         &::before {
           top: 31rem;
@@ -70,7 +70,9 @@
 
 @media (min-width: $desktop) {
   .hero {
-
+    &__title-container {
+      max-width: 37.5%;
+    }
   }
 }
 
