--- a/source/sass/layout/_navigation.scss
+++ b/source/sass/layout/_navigation.scss
@@ -1,12 +1,22 @@
 .main-nav {
-  display: none;
   position: fixed;
   right: 0;
   height: 100vh;
   top: 0;
-  padding-top: 10rem;
+  width: 25.6rem;
+  max-width: 25.6rem;
+  transform: translateX(25.6rem);
+  overflow: hidden;
+  transition: transform 0.3s ease-in;
   background-color: #fff;
   box-shadow: -9px -13px 12px rgba(#000, 0.1);
+
+  &--is-open {
+    transition: transform 0.3s ease-in;
+    width: 25.6rem;
+    max-width: 25.6rem;
+    transform: translateX(0);
+  }
 
   &__list {
     list-style: none;
@@ -33,9 +43,6 @@
     color: $text-color;
     text-align: left;
     transition: $transition-time;
-
-
-
     &:hover {
       color: black;
     }
@@ -69,8 +76,6 @@
 
 @media (min-width: $mobile) {
   .main-nav {
-    width: 25.6rem;
-    max-width: 25.6rem;
 
     &__link {
       &--active,
@@ -83,12 +88,7 @@
 }
 
 @media (min-width: $tablet) {
-  .main-nav {
-    display: block;
-    &__toggle {
-      display: none;
-    }
-  }
+
 
   .main-nav__list {
     display: flex;
@@ -103,13 +103,24 @@
 }
 
 @media (min-width: $desktop-sm) {
+  .main-nav {
+    width: 36rem;
+    max-width: 36rem;
+    transform: translateX(36rem);
 
+    &--is-open {
+      width: 36rem;
+      max-width: 36rem;
+      transform: translateX(0);
+    }
+  }
 }
 
 @media (min-width: $desktop) {
   .main-nav {
     background-color: transparent;
     padding: 0;
+    transform: none;
     max-width: 50%;
     height: inherit;
     flex-basis: 50%;
