--- a/source/sass/main.scss
+++ b/source/sass/main.scss
@@ -43,3 +43,6 @@
 //---------PAGES----------
 
 @import "pages/home";
+@import "pages/article_page";
+@import "pages/article_burger";
+@import "pages/article_navigation";
